# -basic-bazel-node-example

./: BUILD.bazel  MODULE.bazel  cli.mjs  lib.mjs  test.mjs
.github/workflows/: ci.yml
